--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
           </div>
             <div class="card-title">Why We Started</div>
             <p>
-              In 2025, we started SAVI to solve a common problem: strong products and brands losing opportunities because of complex marketplace rules, integrations, and service levels. Our aim is to make these channels structured and manageable.
+              We started SAVI to solve a common problem: strong products and brands losing opportunities because of complex marketplace rules, integrations, and service levels. Our aim is to make these channels structured and manageable.
             </p>
           </div>
         </div>
@@ -933,7 +933,7 @@
           <!-- Inventory & Order Operations -->
           <div class="card">
             <div class="card-title">Inventory &amp; Order Operations</div>
-            <div class="card-subtitle"><b>Stay on top of inventory and SLAs</b></div>
+            <div class="card-subtitle"><b>Stay on top of inventory and SLA<span style="text-transform: lowercase;">s</span></b></div>
             <ul class="list">
               <li>Inventory sync rules, including safety stock and buffer logic.</li>
               <li>Order processing and routing for dropship/3P and 1P, where applicable.</li>
